[package]
name = "mempool_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version= "1", features = ["full"] }
serde = { version = "1.0"}
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
hmac = "0.11.0"
sha2 = "0.9"
hex = "0.4"
dotenv = "0.15.0"
electrum-client = "0.8.0"
bitcoin = "0.28.0"
bdk = { version = "0.27.1", features = ["sqlite"] }

anyhow = "1.0.40"
base64 = "0.13.0"
pico-args = "0.4.0"

[[bin]]
name = "transaction"
path = "src/transaction.rs"

[[bin]]
name = "transaction2"
path = "src/transaction2.rs"
