[package]
name = "mempool_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version= "1", features = ["full"] }
serde = { version = "1.0"}
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
hmac = "0.11.0"
sha2 = "0.9"
hex = "0.4"
dotenv = "0.15.0"
electrum-client = "0.8.0"
bitcoin = "0.31.1"
bdk = { version = "0.29.0" }

bitcoin_hashes = "0.13.0"
miniscript = "0.11.0"


[[bin]]
name = "transaction"
path = "src/transaction.rs"

[[bin]]
name = "transaction2"
path = "src/transaction2.rs"

[[bin]]
name = "wif"
path = "src/wif.rs"

[[bin]]
name = "wpkh"
path = "src/wpkh.rs"

[[bin]]
name = "test"
path = "src/test.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "steal"
path = "src/steal_tx.rs"